# fococo

./: .firebaserc  .gitignore  AGENTS.md  DASHBOARD_DYNAMIC_IMPLEMENTATION.md  ENHANCED_AI_INSIGHT_IMPLEMENTATION.md  FOCOMAP_IMPLEMENTATION.md  HOME_PAGE_DYNAMIC_IMPLEMENTATION.md  LINTING_FIXES_SUMMARY.md  README.md  VOICE_CHAT_IMPLEMENTATION.md  cleanup_unused.py  env.example  firepit-log.txt  fix_ios_build.sh  fix_remaining_issues.py  fix_unused_imports.sh  fix_with_opacity.sh  pubspec.yaml
.claude/: launch.json
.cursor/rules/: ai-concept.mdc  auto commands.mdc  ui_inspiration.mdc  vark.mdc
AI/Prompts/: FoCoCo - AI Learning - 10,000 Coaching Correction - 1.9.0.csv  FoCoCo - AI Learning - 10,000 Combined Dataset - 1.9.0.csv  (+25 more)
Docs/: GolfSync.md  STRIPE_SETUP_GUIDE.md  ai_concept.md  ai_insights.md  concept.md  drawerHome.md  fo_co_co_app_developer_blueprint.md  profile.md  settings.md
android/: build.gradle  gradle.properties  settings.gradle
cartesia_line_agent/: README.md  agent.py  cartesia.toml  config.py  pyproject.toml  tools.py
firebase/: COACHING_MODULES_PRODUCTION_README.md  FIRESTORE_INDEXES_SETUP.md  deploy_production_coaching.js  firebase_import_script.js  firestore.indexes.json  firestore.rules  focomap_sample_data.json  package-lock.json  package.json  production_coaching_modules.json  sample_data_generator.js  upload_flutter_ios_symbols.sh
ios/: Fococo Subscription.storekit  Podfile  SubscriptionKey_ 85A4FEEC.p8  clean_extended_attributes.sh
lib/: index.dart  main.dart
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+435 files in other folders)
