[project]
name = "fococo-line-agent"
version = "0.1.0"
description = "FoCoCo conversational coach — Cartesia Line agent (Gemini reasoning + Cartesia voice/STT)"
requires-python = ">=3.11"
dependencies = [
    "cartesia-line",
    "google-genai>=2.7.0",
]

[tool.uv]
# Pin the SDK once you've confirmed the version locally with `uv add cartesia-line`.
